<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_header_bg"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="#FFFAFAFA"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       	android:layout_marginLeft="2dp"
       	android:layout_marginRight="2dp"
       	android:layout_marginTop="3dp"
        android:background="@drawable/shapelayout_grey_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >
             <TextView
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop = "16dp"
                android:paddingBottom = "16dp"
                android:layout_marginLeft="2dp"
                android:text="@string/update"/>
            
            <ImageView android:id="@+id/check_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop = "12dp"
                android:paddingBottom = "12dp"
         	    android:layout_marginLeft="60dp"
                android:src="@drawable/menu_update" />
         
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"  
                android:layout_marginRight="10dp"
               android:layout_marginTop="10dp"
                android:src="@drawable/night_set_unfold" />
       	</RelativeLayout>
       
         
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
      	android:layout_marginRight="2dp"
        android:background="@drawable/shapelayout_grey_bg"
        android:orientation="vertical" >

          <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:focusable = "true"
            android:clickable = "true" >
            
			
            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop = "16dp"
                android:paddingBottom = "16dp"
                android:layout_marginLeft="13dp"
                android:text="@string/about"/>
            
            <ImageView android:id="@+id/hi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                 android:paddingTop = "10dp"
                android:paddingBottom = "10dp"
         	    android:layout_marginLeft="50dp"
                android:src="@drawable/hi" />
			 
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/night_set_unfold" />
       </RelativeLayout>
    </LinearLayout>
</LinearLayout>