<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
      android:background="@drawable/bj" >
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/dialog_header_bg" >

        <TextView
            android:id="@+id/currentcitytitletxt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:text="@string/school_express"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/shapelayout_grey_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|center_vertical"
                android:text="@string/ems_company"
                android:textColor="#262626"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/companyname_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="7"
                android:background="@drawable/linearlayout_selectbackground"
                android:gravity="center|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="left|center_vertical"
                    android:hint="请选择快递公司"
                    android:textColor="#00688B"
                    android:focusable="false"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/night_set_unfold"
                    android:gravity="center|center_vertical"
                    android:textColor="#262626"
                    android:textSize="23sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5B5B5B" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|center_vertical"
                android:text="@string/ems_school"
                android:textColor="#262626"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <EditText
                    android:id="@+id/school_name"
                    android:layout_width="0dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center|center_vertical"
                    android:layout_weight="2"
                    
                    android:gravity="left|center_vertical"
                    android:hint="请输入学校全名"
                    android:paddingLeft="5dp"
                    android:text="福州大学"
                    android:textColor="#00688B"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#5B5B5B" />

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <Button
                android:id="@+id/school_express_search"
                android:layout_width="0dp"
                android:layout_height="50dp"  
                android:layout_weight="1"
                android:layout_gravity="center|center_vertical"
                android:gravity="center_horizontal|center_vertical"
                android:background="@drawable/button_selector_search"
                android:text="查询"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
